# Charles-Dicken-QA-chatbot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  api.py  app.py  main_flow.py  pyproject.toml  requirements-api.txt  requirements.txt
assets/: rag_flow.html
data/: dickens_books.csv
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOCKER.md  STREAMLIT_GUIDE.md
infra/: Dockerfile.api  Dockerfile.streamlit  docker-compose.yaml  mlflow.yaml  phoenix.yaml  prefect.yaml  redis.yaml
notebooks/: generation.ipynb  ingestion.ipynb  ingestion_no_workflow.ipynb  rag.ipynb  ragflow.ipynb
scripts/: pull_opik.sh
src/api/: api.py  schemas.py
src/charles_dicken_qa_chatbot/: config.py  constants.py  evaluation.py  events.py  flow.py  ingestion.py  utils.py  workflow.py
src/chat/: app.py  constants.py
