[project]
authors = [{name = "Nguyen Hoang", email = "hmnguyen1067@gmail.com"}]
dependencies = []
name = "Charles-Dicken-QA-chatbot"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
charles_dicken_qa_chatbot = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pip = ">=25.2,<26"
ipykernel = ">=6.30.1,<7"
python = "3.11.13.*"
spacy = ">=3.8.7,<4"
pre-commit = ">=4.3.0,<5"
pandas = ">=2.3.2,<3"
python-dotenv = ">=1.1.1,<2"
mlflow = ">=3.2.0,<4"
